# wwshc

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  SECURITY.md  TODO.md  main.py  requirements.txt  setup.cfg  setup.py  test.py
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  codeql.yml
examples/: auto_answer.py
wwshc/: __init__.py  _agent.py  _class.py  _group.py  _task.py  _user.py  references.py  wwsels.py  wwserr.py  wwsevent.py  wwsopt.py
wwshc/utils/: __init__.py  caching.py  extra.py
