[metadata]
name = wwshc
version = 0.0.11
author = JoJoJux
author_email = wwshc@jojojux.de
long_description = file: README.md
long_description_content_type = text/markdown
url = https://wwshc.jojojux.de/
project_urls =
    Bug Tracker = https://wwshc.jojojx.de/bugs

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.4 <4

[options.packages.find]
where = .